added link property controls to internet map. now setting link properties is possible through the infopanel on the side. This will execute an updated tc command in all containers attached to the network

--- a/client/frontend/src/map/css/map.css
+++ b/client/frontend/src/map/css/map.css
@@ -245,3 +245,17 @@ label {
 #current-multiplier::after {
     content: 'x';
 }
+
+.property-input {
+    width: 10em;
+    padding-left: 10px;
+    margin-right: 10px;
+    border-top-width: 0;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 1px;
+}
+
+.submit-button {
+    font-size: 1.2em;
+}
